[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "lib"
path = "src/lib.rs"
bench = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "advent_benchmarks"
harness = false